feat(perf): Decrease startup time.
build(distribution): Add MacOS ARM.

Next Version 1.0.11-SNAPSHOT [skip ci]

build(distribution): Add MacOS ARM.

Next Version 1.0.12-SNAPSHOT [skip ci]

build(distribution): Add MacOS ARM.

Next Version 1.0.13-SNAPSHOT [skip ci]

build(distribution): Add MacOS ARM.

Next Version 1.0.14-SNAPSHOT [skip ci]